testsuite/tests/deriving/should_fail/T6147.stderr
T6147.hs:13:32: error: [GHC-18872]
    • Couldn't match type ‘Int’ with ‘Foo’
        arising from the coercion of the method ‘foo’
          from type ‘Int -> T Int’ to type ‘Foo -> T Foo’
    • When deriving the instance for (C Foo)

